# the-derivation

./: .gitignore  .readthedocs.yaml  Makefile  README.md  main.py  make.bat  pyproject.toml  requirements.txt
docs/: plan.md  requirements.txt
source/: about.md  conf.py  index.md
source/_static/: custom.css
source/mechanics_of_machine/: mechanics_of_machine.md
source/mechanics_of_machine/mechanisms/: mechanisms.md
source/mechanics_of_machine/mechanisms/slider_crank_mechanism/implementation/: slider_crank_mechanism.ipynb
source/mechanics_of_machine/mechanisms/slider_crank_mechanism/theory/: fundamentals.md
source/mechanisms/: mechanisms.md
source/mechanisms/slider_crank_mechanism/implementation/: slider_crank_mechanism.py
source/mechanisms/slider_crank_mechanism/implementation/__marimo__/: slider_crank_mechanism.ipynb
source/mechanisms/slider_crank_mechanism/theory/: fundamentals.md
